--- a/will-you-be-my-valentine-main/package.json
+++ b/will-you-be-my-valentine-main/package.json
@@ -1,6 +1,6 @@
 {
   "name": "will-you-be-my-valentine",
-  "homepage": "https://saurabhnemade.github.io/will-you-be-my-valentine",
+  "homepage": "https://thonzy.github.io/Valentine",
   "private": true,
   "version": "0.0.1",
   "type": "module",
@@ -12,6 +12,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "Valentine": "link:..\\..\\..\\AppData\\Local\\pnpm\\global\\5\\node_modules\\Valentine",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -22,13 +23,18 @@
     "@typescript-eslint/parser": "^6.21.0",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.17",
-    "gh-pages": "^6.1.1",
     "eslint": "^8.56.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.2.2",
     "vite": "^5.1.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "Valentine": "link:..\\..\\..\\AppData\\Local\\pnpm\\global\\5\\node_modules\\Valentine"
+    }
   }
 }
